--- a/src/main/resources/templates/pie.html
+++ b/src/main/resources/templates/pie.html
@@ -1,277 +1,25 @@
-  <!-- Rodape de la pagina  -->
-  <footer class="footer footer-1 version f-pr-background">
-    <div class="footer-top">
-        <div class="container">
-            <div class="row justify-content-between align-items-start">
+<footer class="d-flex flex-wrap justify-content-between align-items-center py-3" style="background-color: #282828; padding: 0px 100px;">
+  <p class="col-md-4 mb-0 text-white">© 2025 Chetos</p>
 
-                <!-- Ajuda e Suporte -->
-                <div class="col-sm-12 col-md-8 col-lg-8">
-                    <div class="footer-navigation">
-                        <div class="row justify-content-between align-items-start">
-                            <div class="col">
-                                <div class="d-flex flex-column">
-                                    <div class="col-12 mb-4">
-                                        <h2 class="h2 f-sc-color">Ajuda e Suporte</h2>
-                                    </div>
-                                    <div class="col-12 mb-2">
-                                        <a class="f-sc-color d-block text-center text-md-left"
-                                            href="https://rastreamentocorreios.info/"
-                                            aria-label="Rastrear pedido">
-                                            <span class="text">Rastrear pedido</span>
-                                        </a>
-                                    </div>
-                                    <div class="col-12 mb-2">
-                                        <a class="f-sc-color d-block text-center text-md-left"
-                                            href="https://www.espvalentina.com.br/como-comprar"
-                                            aria-label="Como comprar">
-                                            <span class="text">Como comprar</span>
-                                        </a>
-                                    </div>
-                                    <div class="col-12 mb-2">
-                                        <a class="f-sc-color d-block text-center text-md-left"
-                                            href="https://www.espvalentina.com.br/politica-de-troca"
-                                            aria-label="Política de Troca">
-                                            <span class="text">Política de Troca</span>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+  <a href="/" class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+    <img th:src="@{/img/{logo}(logo=${empresa.logo})}" alt="logo chetos" height="100">
+  </a>
 
-
-                <!-- css para el pie de pagina -->
-
-                <style>
-                    /* Asegura que la fila contenga los elementos alineados horizontalmente */
-                    .footer-contact .row {
-                        display: flex;
-                        flex-direction: row;
-                        flex-wrap: wrap;
-                        justify-content: space-between;
-                    }
-
-                    .footer-contact .col-auto {
-                        margin-bottom: 10px;
-                        display: flex;
-                        align-items: center;
-                    }
-
-                    .footer-contact .icon {
-                        margin-right: 10px;
-                    }
-
-                    .footer-contact .material-icons {
-                        font-size: 20px;
-                    }
-
-                    /* Diseño de los enlaces */
-                    .footer-contact a {
-                        text-decoration: none;
-                        color: inherit;
-                        display: flex;
-                        align-items: center;
-                    }
-
-                    .footer-contact a:hover {
-                        color: #FF6600;
-                        /* Color al pasar el mouse sobre el enlace */
-                    }
-
-                    /* Color de los iconos */
-                    .f-hl-color {
-                        color: #ff6600;
-                        /* El mismo color para todos los iconos */
-                    }
-
-
-                    /* Diseño de los textos */
-
-
-                </style>
-
-                <!-- Atendimento -->
-                <div class="col-sm-12 col-md-4 col-lg-4">
-                    <div class="footer-contact">
-                        <div class="row mb-4">
-                            <div class="col">
-                                <div class="h2 f-sc-color">Atendimento</div>
-                            </div>
-                        </div>
-                        <div class="row no-gutters align-items-start flex-column justify-content-start">
-                            <!-- Teléfono -->
-                            <div class="col-auto mb-3">
-                                <a class="f-sc-color phone d-flex align-items-center" rel="noreferrer"
-                                    th:href="@{'tel:' + ${empresa.telefono}}" target="_blank">
-                                    <i class="icon mr-3 d-flex align-items-center">
-                                        <!-- Icono de llamada -->
-                                        <i class="f-hl-color material-icons" style="font-size: 19px;">call</i>
-                                    </i>
-                                    <b class="phone" th:text="${empresa.telefono}">(00) 0000-0000</b>
-                                </a>
-                            </div>
-
-<!-- WhatsApp -->
-<div class="col-auto mb-3">
-<a class="f-sc-color phone d-flex align-items-center" rel="noreferrer"
-th:href="@{'https://wa.me/' + ${empresa.whatsapp}}" target="_blank">
-<i class="icon mr-3 d-flex align-items-center">
-    <!-- Icono de WhatsApp usando Font Awesome sin color en línea -->
-    <i class="fab fa-whatsapp f-hl-color" style="font-size: 19px;"></i>
-</i>
-<b class="email" th:text="${empresa.whatsapp}">WhatsApp</b>
-</a>
-</div>
-                            <!-- Dirección -->
-                            <div class="col-auto mb-3">
-                                <i class="f-hl-color material-icons" style="font-size: 19px;">location_on</i>
-                                <span class="f-sc-color text d-flex"
-                                    th:text="${empresa.direccion}">Dirección</span>
-                            </div>
-
-                            <!-- Horario -->
-                            <div class="col-auto mb-3">
-                                <i class="f-hl-color material-icons" style="font-size: 19px;">access_time</i>
-                                <span class="f-sc-color text d-flex" th:text="${empresa.horario}">Atendimento
-                                    das 10 às 18h</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-
-
-
-
+  <ul class="nav d-flex flex-column ms-auto text-start" style="width: 250px;">
+    <li class="nav-item d-flex align-items-center text-white mb-2">
+        <i class="bi bi-whatsapp me-2" style="color: #ABA398;"></i>
+        <span th:text="${empresa.whatsapp}"></span>
+    </li>
+    <li class="nav-item d-flex align-items-center text-white mb-2">
+        <i class="bi bi-telephone-fill me-2" style="color: #ABA398;"></i>
+        <span th:text="${empresa.telefono}"></span>
+    </li>
+    <li class="nav-item d-flex align-items-center text-white mb-2">
+        <i class="bi bi-geo-alt-fill me-2" style="color: #ABA398;"></i>
+        <span th:text="${empresa.direccion}"></span>
+    </li>
+    <li class="nav-item text-white">
+        <span th:text="${empresa.horario}"></span>
+    </li>
+</ul>
 </footer>
-
-<div class="footer-middle">
-    <div class="container">
-        <div class="row justify-content-between align-items-center">
-            <div class="col-sm-12 col-md-auto col-lg-auto">
-                <div class="footer-social">
-                    <div class="row align-items-center justify-content-center">
-                        <div class="col-auto">
-                            <a class="f-hl-color text-center" rel="noreferrer" aria-label="facebook"
-                                target="_blank" href="http://www.facebook.com/espvalentina">
-                                <i class="d-flex icon"><span class="icon-facebook"></span></i>
-                            </a>
-                        </div>
-                        <div class="col-auto">
-                            <a class="f-hl-color text-center" rel="noreferrer" aria-label="instagram"
-                                target="_blank" href="http://www.instagram.com/espvalentina">
-                                <i class="d-flex icon"><span class="icon-instagram"></span></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-12 col-md-auto col-lg-auto">
-
-                <div class="footer-newsletter">
-
-                    <div class="row mb-4">
-                        <div class="col">
-                            <div class="h2  f-sc-color">Receba novidades e promoções</div>
-                        </div>
-                    </div>
-                    <div class="row flex-column">
-                        <div class="col-auto">
-                            <form class="newsletter-form row no-gutters position-relative"
-                                data-url="https://www.espvalentina.com.br/action/newsletter/add" method="post">
-                                <input type="hidden" name="form_type" value="newsletter">
-                                <input type="text" name="empty" style="display: none;">
-
-                                <div class="col-auto">
-                                    <input class="footer-input w-100" minlength="3" aria-label="name"
-                                        name="name" placeholder="Seu nome" required type="text">
-                                </div>
-
-                                <div class="col-auto">
-                                    <input class="footer-input w-100" aria-label="email" name="email"
-                                        placeholder="Seu e-mail" required type="email">
-                                </div>
-
-                                <button class="btn footer-submit f-hl-background" name="button" type="submit">
-                                    <span class="text">OK</span>
-                                </button>
-
-                                <div class="footer-success">
-                                    <div class="d-flex align-items-center justify-content-center h-100">
-                                        <span class="text h3 m-0">Cadastro realizado com sucesso</span>
-                                    </div>
-                                </div>
-
-                                <div class="footer-errors">
-                                    <div class="d-flex align-items-center justify-content-center h-100">
-                                        <span class="text h3 m-0">Espaço Valentina | Marca Carioca Cheia de Amor
-                                            💛</span>
-                                    </div>
-                                </div>
-
-                                <div class="footer-loader">
-                                    <span class="loader"></span>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-
-                <script type="text/javascript">document.addEventListener("DOMContentLoaded", function () {
-                        $(function () {
-                            var url = $('.newsletter-form').data('url');
-                            var xhr = _dcs.Xhr(url);
-
-                            window.getParamns = function (element) {
-                                var data = element.serializeArray().reduce(function (obj, item) {
-                                    obj[item.name] = item.value;
-                                    return obj;
-                                }, {});
-
-                                return data || null;
-                            };
-
-                            var registerEmail = function (data) {
-                                $('.footer-loader').fadeIn();
-
-                                xhr.post({
-                                    id: 'email-capture',
-                                    data: data
-                                }).done(function (response) {
-                                    $('.footer-success').fadeIn();
-                                    $('.footer-loader').fadeOut();
-
-                                    document.dispatchEvent(new CustomEvent('tracker.signUpNewsletter', { 'detail': data }));
-                                }).fail(function (jqXHR, textStatus, errorThrown) {
-                                    var errors = $('.footer-errors');
-
-                                    jqXHR.responseJSON.errors.map(function (item) {
-                                        errors.find('.text').empty();
-                                        errors.find('.text').append(item);
-                                    });
-
-                                    errors.fadeIn();
-
-                                    $('.footer-loader').fadeOut();
-                                });
-                            };
-
-                            $('.newsletter-form').on('submit', function (evt) {
-                                evt.preventDefault();
-                                var paramns = window.getParamns($(this));
-
-                                registerEmail(paramns);
-                            });
-                        });
-                    }, false);
-                </script>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="text mt-3">
-    <p style="text-align: center;"><small>©2025 Chetos. Todos os direitos
-            reservados.</small><br></p>
-          </div>
