--- a/src/main/resources/templates/registrarProducto.html
+++ b/src/main/resources/templates/registrarProducto.html
@@ -47,7 +47,7 @@
 </head>
 
 <body>
-
+    <div th:insert="PanelControlAdmin :: navbar"></div>
     <div class="form-container">
         <h2 class="text-center mb-4">Registro de Producto</h2>
 
