--- a/src/main/resources/templates/carrito.html
+++ b/src/main/resources/templates/carrito.html
@@ -1,51 +1,112 @@
 <!DOCTYPE html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <title>Carrito de Compras</title>
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+    <link href="/css/styles.css" rel="stylesheet" />
+    <link href="/css/carrito.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
+
 <body>
-<h1>Carrito de Compras</h1>
+    <th:block th:include="encabezado"></th:block>
 
-<div th:if="${carrito != null and #lists.size(carrito) > 0}">
-    <table border="1">
-        <thead>
-        <tr>
-            <th>Producto</th>
-            <th>Talle</th>
-            <th>Color</th>
-            <th>Cantidad</th>
-            <th>Precio Unitario</th>
-            <th>Subtotal</th> <!-- Nueva columna -->
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="detalle : ${carrito}">
-            <td th:text="${detalle.producto.nombre}"></td>
-            <td th:text="${detalle.talle}"></td>
-            <td th:text="${detalle.color}"></td>
-            <td th:text="${detalle.cantidad}"></td>
-            <td th:text="${#numbers.formatDecimal(detalle.precio_unit, 1, 'COMMA', 2, 'POINT')}"></td>
-            <td th:text="${#numbers.formatDecimal(detalle.precio_unit * detalle.cantidad, 1, 'COMMA', 2, 'POINT')}"></td>
-        </tr>
-        </tbody>
-    </table>
-    <p><strong>Total del carrito:</strong> <span th:text="${#numbers.formatDecimal(total, 1, 'COMMA', 2, 'POINT')}"></span></p>
+    <main class="page">
+        <section class="shopping-cart dark">
+            <div class="container">
+                <div class="block-heading text-center">
+                    <h2>Carrito de Compras</h2>
+                </div>
 
+                <div class="content" style="padding: 0px 0px 0px 30px"
+                    th:if="${carrito != null and #lists.size(carrito) > 0}">
+                    <div class="row no-gutters">
+                        <div class="col-md-12 col-lg-8" style="padding: 0px 15px;">
+                            <div class="items">
+                                <div class="product" th:each="detalle : ${carrito}">
+                                    <div class="row align-items-center">
+                                        <div class="col-md-3">
+                                            <img class="img-fluid mx-auto d-block image"
+                                                th:src="@{'/img/' + ${detalle.producto.foto}}"
+                                                th:alt="${detalle.producto.nombre}" />
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="info">
+                                                <div class="product-name">
+                                                    <span th:text="${detalle.producto.nombre}"></span>
+                                                </div>
+                                                <div class="product-info">
+                                                    <div>Talle: <span class="value" th:text="${detalle.talle}"></span>
+                                                    </div>
+                                                    <div>Color: <span class="value" th:text="${detalle.color}"></span>
+                                                    </div>
+                                                    <div>Cantidad: <span class="value"
+                                                            th:text="${detalle.cantidad}"></span></div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-md-3 text-right">
+                                            <b><span class="price"
+                                                    th:text="${#numbers.formatDecimal(detalle.precio_unit * detalle.cantidad, 1, 'COMMA', 2, 'POINT')}"></span></b>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
 
-    <form action="/carrito/realizar-pedido" method="POST">
-        <label for="nombre">Nombre:</label>
-        <input type="text" id="nombre" name="nombre" required>
-        <label for="telefono">Teléfono:</label>
-        <input type="text" id="telefono" name="telefono" required>
-        <label for="direccion">Dirección:</label>
-        <input type="text" id="direccion" name="direccion" required>
-        <button type="submit">Realizar Pedido</button>
-    </form>
-</div>
+                        <div class="col-md-12 col-lg-4" style="padding: 0px 0px 0px 15px;">
+                            <div class="summary">
+                                <h3>Resumen</h3>
+                                <div class="summary-item"><span class="text">Total:</span>
+                                    <b><span class="price"
+                                            th:text="${#numbers.formatDecimal(total, 1, 'COMMA', 2, 'POINT')}"></span></b>
+                                </div>
 
-<div th:if="${carrito == null or #lists.isEmpty(carrito)}">
-    <p>El carrito está vacío.</p>
-</div>
+                                <form action="/carrito/realizar-pedido" method="POST">
+                                    <div class="summary-item">
+                                        <label for="nombre">Nombre:</label>
+                                        <input type="text" id="nombre" name="nombre" class="form-control" required>
+                                    </div>
+                                    <div class="summary-item">
+                                        <label for="telefono">Teléfono:</label>
+                                        <input type="text" id="telefono" name="telefono" class="form-control" required>
+                                    </div>
+                                    <div class="summary-item">
+                                        <label for="direccion">Dirección:</label>
+                                        <input type="text" id="direccion" name="direccion" class="form-control"
+                                            required>
+                                    </div>
+                                    <button type="submit" class="btn btn-block"
+                                        style="background-color: #ABA398; color: white;">Realizar pedido</button>
+                                </form>
+                                <div class="summary-item" style="padding-top: 10px;">
+                                    <a href="/index" style="text-decoration: none; color: black;">
+                                        <h6 class="text" style="text-align: center;">Continuar comprando</h6>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div th:if="${carrito == null or #lists.isEmpty(carrito)}" class="text-center mt-5">
+                <p>El carrito está vacío.</p>
+            </div>
+            </div>
+        </section>
+    </main>
+
+    <th:block th:include="pie"></th:block>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/js/scripts.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 </body>
+
 </html>
