--- a/src/main/resources/templates/encabezado.html
+++ b/src/main/resources/templates/encabezado.html
@@ -1,3 +1,6 @@
+
+
+
 <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container px-4 px-lg-5">
@@ -55,29 +58,20 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent2">
             <ul class="navbar-nav w-100 d-flex justify-content-between text-center mb-2 mb-lg-0 ms-lg-4 me-lg-4">
                 <li class="nav-item flex-fill">
-                    <a class="nav-link active" aria-current="page" href="#!">News da semana</a>
+                    <a class="nav-link active" aria-current="page" href="/novedades">Novedades</a>
                 </li>
                 <li class="nav-item flex-fill">
-                    <a class="nav-link active" href="#!">Esheley</a>
+                    <a class="nav-link active" href="/ultimasOportunidades">Últimas oportunidades</a>
                 </li>
                 <li class="nav-item flex-fill">
-                    <a class="nav-link active" href="#!">Coleção verão</a>
+                    <a class="nav-link active" href="/femenino">Femenino</a>
                 </li>
+                    <li class="nav-item flex-fill">
+                    <a class="nav-link active" href="/masculino">Masculino</a>
+                </li>
+
                 <li class="nav-item flex-fill">
-                    <a class="nav-link active" href="#!">Promoção</a>
-                </li>
-                <li class="nav-item dropdown flex-fill">
-                    <a class="nav-link dropdown-toggle" id="navbarDropdown2" href="#" role="button"
-                        data-bs-toggle="dropdown" aria-expanded="false">Feminino</a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#!">All Products</a></li>
-                        <li><hr class="dropdown-divider" /></li>
-                        <li><a class="dropdown-item" href="#!">Popular Items</a></li>
-                        <li><a class="dropdown-item" href="#!">New Arrivals</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item flex-fill">
-                    <a class="nav-link active" href="#!">Contato</a>
+                    <a class="nav-link active" href="#!">Política de compra​ </a>
                 </li>
             </ul>
         </div>
