--- a/src/main/resources/templates/masculino.html
+++ b/src/main/resources/templates/masculino.html
@@ -16,35 +16,7 @@
 </head>
 
 <body>
-    <!-- Carrusel-->
-    <th:block th:include="encabezado"></th:block>
-    <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="https://wowslider.com/sliders/demo-80/data1/images/plumage176723_1920.jpg"
-                    class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="https://wowslider.com/sliders/demo-80/data1/images/nature497978_1920.jpg"
-                    class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-                <img src="https://wowslider.com/sliders/demo-80/data1/images/sheet546475_1920.jpg" class="d-block w-100"
-                    alt="...">
-            </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
-    </div>
-
+   <th:block th:include="encabezado"></th:block>
     <div class="col-12 text-center">
         <h2 class="text-center mt-4" style="font-family: Open Sans; font-weight: bold; font-size: 30px; color: #282828;">
             Productos</h2>
@@ -54,7 +26,7 @@
 
 
  <div class="container px-4 px-lg-5 mt-4">
-        <form th:action="@{/index}" method="get">
+        <form th:action="@{/masculino}" method="get">
             <div class="row gx-4 gx-lg-5 align-items-center">
                 <div class="col-md-2">
                     <label for="talle" class="form-label">Talle:</label>
